Fix overflow and scrolling issues and wire up calendar display on room-finder

--- a/RightpointLabs.ConferenceRoom.WebUI/src/findRoom/findRoom.less
+++ b/RightpointLabs.ConferenceRoom.WebUI/src/findRoom/findRoom.less
@@ -16,5 +16,21 @@
     background-color: black;
     opacity: 0.6;
   }
+  
+  .calendar-area {
+      position: absolute;
+      top: 50px;
+      bottom: 0;
+      right: 0;
+      left: 0;
+    background: @darkBlue;
+    .calendar {
+        position: absolute;
+        top: 50px;
+        right: 15px;
+        bottom: 15px;
+        left: 15px;
+    }
+  }
     
 }
